# GrokSearch-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.deploy  Dockerfile.deploy.dockerignore  README.md  RELEASING.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  PUBLISH.md
npm/grok-search-rs/: README.md  package.json  run.js
scripts/: build-deploy-dist.sh
src/: config.rs  http.rs  lib.rs  main.rs  mcp.rs  service.rs  time_context.rs
src/adapters/: grok_responses_response.rs
src/model/: source.rs  tool.rs
src/oauth/: login.rs  pkce.rs  token_store.rs
src/providers/: firecrawl.rs  http.rs  tavily.rs
src/sources/: arxiv.rs  github.rs  mod.rs  stackexchange.rs
tests/: adapter_grok_responses.rs  config.rs  firecrawl_parse.rs  integration_service.rs  response_budget.rs  service_contract.rs  sources_render.rs  sse_bug_repro.rs  tavily_parse.rs  tavily_rotation.rs
tests/fixtures/sources/: arxiv_atom.xml  github_release.json  stackexchange.json
